gccida/g2/ggc_mark_trees
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/ggc-common.c:890:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/ggc-common.c:892:1: error: unknown type name 'ggc_statistics_0'; did you mean 'ggc_statistics'?
ggc_statistics_0 *v4; // rax 
^~~~~~~~~~~~~~~~
ggc_statistics
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/ggc.h:225:3: note: 'ggc_statistics' declared here
} ggc_statistics;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/ggc-common.c:1027:19: error: expected expression
v2 = ( tree_node *)*( ( _QWORD *)&v0->name + elements_used); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/ggc-common.c:1027:8: error: use of undeclared identifier 'tree_node'
v2 = ( tree_node *)*( ( _QWORD *)&v0->name + elements_used); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/ggc-common.c:1184:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)&v2->block.common + 16)); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/ggc-common.c:1184:36: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
rtl_op = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)&v2->block.common + 16)); 
                       ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_mark_trees/src/obj/ggc-common.o] Error 1
